[tool.poetry]
name = "turbo-docs"
version = "1.1.3"
description = "GPT-powered command line interface for generating documentation"
authors = ["Jamie Voynow <voynow99@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8"
openai = "^1.3.7"
click = "^8.1.7"
pyperclip = "^1.8.2"
toml = "^0.10.2"
pathspec = "^0.11.2"
tiktoken = "^0.5.2"

[tool.poetry.scripts]
turbo_docs = "turbo_docs.generate:driver"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"


[tool.turbo_docs]
ignore = [
    "pyproject.toml",
    "__pycache__",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".git",
    ".env",
    "poetry.lock",
]
